--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0\n"
+      "9.0\n"
      ]
     }
    ],
    "source": [
     "x = tf.placeholder(tf.float32, shape=[], name=\"x\")\n",
-    "y = x + 2\n",
+    "w = tf.constant(3., name=\"w\")\n",
+    "y = x*w\n",
     "\n",
     "session = tf.Session()\n",
     "\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
     "    return tf.reduce_sum(tf.multiply(weights, inp)) + bias\n",
     "\n",
     "x = tf.placeholder(tf.float32, shape=[3], name=\"x\")\n",
-    "w = tf.constant(np.array([1.,1.,1.], dtype=np.float32), name=\"w\")\n",
+    "w = tf.constant([1.,1.,1.], name=\"w\")\n",
     "b = tf.constant(0.0, name=\"b\")\n",
     "y = linear(x, w, b)\n",
     "\n",
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -384,70 +385,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.reset_default_graph()\n",
-    "\n",
-    "def linear(inp, weights, bias):\n",
-    "    return tf.matmul(inp, weights) + bias\n",
-    "\n",
-    "x = tf.placeholder(tf.float32, shape=[4, 3], name=\"x\")\n",
-    "w = tf.Variable(np.array([[1,2],[1,2],[1,2]], dtype=np.float32), name=\"w\")\n",
-    "b = tf.Variable(np.array([0,0], dtype=np.float32), name=\"b\")\n",
-    "y = linear(x, w, b)\n",
-    "\n",
-    "target = tf.placeholder(tf.float32, shape=[4, 2], name=\"target\")\n",
-    "\n",
-    "cost = tf.reduce_mean(tf.reduce_sum(tf.square(y-target), axis=1))\n",
-    "gradients = tf.gradients(cost, tf.trainable_variables())\n",
-    "\n",
-    "update_op = tf.group(*[tf.assign(var, var - grad) for var, grad in zip(tf.trainable_variables(), gradients)])\n",
-    "\n",
-    "session = tf.Session()\n",
-    "session.run(w.initializer)\n",
-    "session.run(b.initializer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cost = 63474308.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "feed_dict = {\n",
-    "    x: np.array([[1,2,3], [4,5,6], [7,8,9], [10,11,12]]),\n",
-    "    target: np.array([[3,6], [7.5, 15], [12, 24], [16.5, 33]])\n",
-    "}\n",
-    "result = session.run([cost, gradients, update_op], feed_dict=feed_dict)\n",
-    "print(\"cost = {}\".format(result[0]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since we don't want to press enter everytime, let's put this session.run cell into a for loop and run it for, say, 20 iterations, printing out the cost (you don't need to print the gradient)."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
+    "\n",
     "def linear(inp, weights, bias):\n",
     "    return tf.matmul(inp, weights) + bias\n",
     "\n",
@@ -471,6 +414,64 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cost = 601.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_dict = {\n",
+    "    x: np.array([[1,2,3], [4,5,6], [7,8,9], [10,11,12]]),\n",
+    "    target: np.array([[3,6], [7.5, 15], [12, 24], [16.5, 33]])\n",
+    "}\n",
+    "result = session.run([cost, gradients, update_op], feed_dict=feed_dict)\n",
+    "print(\"cost = {}\".format(result[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we don't want to press enter everytime, let's put this session.run cell into a for loop and run it for, say, 20 iterations, printing out the cost (you don't need to print the gradient)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "def linear(inp, weights, bias):\n",
+    "    return tf.matmul(inp, weights) + bias\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, shape=[4, 3], name=\"x\")\n",
+    "w = tf.Variable(np.array([[1,2],[1,2],[1,2]], dtype=np.float32), name=\"w\")\n",
+    "b = tf.Variable(np.array([0,0], dtype=np.float32), name=\"b\")\n",
+    "y = linear(x, w, b)\n",
+    "\n",
+    "target = tf.placeholder(tf.float32, shape=[4, 2], name=\"target\")\n",
+    "\n",
+    "cost = tf.reduce_mean(tf.reduce_sum(tf.square(y-target), axis=1))\n",
+    "gradients = tf.gradients(cost, tf.trainable_variables())\n",
+    "\n",
+    "update_op = tf.group(*[tf.assign(var, var - grad) for var, grad in zip(tf.trainable_variables(), gradients)])\n",
+    "\n",
+    "session = tf.Session()\n",
+    "session.run(w.initializer)\n",
+    "session.run(b.initializer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -615,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -783,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -32367,7 +32368,7 @@
     "- Make them compare different optimizers (momentum and adam only) £\n",
     "- Let them play with it for 20 mins (expect questions, and discuss them publicly)\n",
     "- Once we have a good algorithm, I plot the learned weights and discuss it. £\n",
-    "- Talk about other useful Tensorflow features.\n",
+    "- Talk about other useful Tensorflow features (such as GPU acceleration).\n",
     "- Pros and cons of deep learning\n",
     "- Give an overview of the state of the art, and further architectures (recurrent, convolutional, residual, attention, etc)\n",
     "- Give thought examples (how to choose features, etc)\n",
@@ -32394,6 +32395,13 @@
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make them add 2 fucking layers!"
    ]
   },
   {
@@ -32550,7 +32558,7 @@
     }
    ],
    "source": [
-    "for i in range(10000):\n",
+    "for i in range(5000):\n",
     "    batch_images, batch_labels = mnist.train.next_batch(100)\n",
     "    \n",
     "    feed_dict = {\n",
@@ -32608,55 +32616,7 @@
     "When a network stops learning there might be a couple of likely reasons:\n",
     "- The network doesn't have the capacity to learn anymore or it can't find a better minimum\n",
     "- The learning rate is too high\n",
-    "- The activations are poorly dimensioned so the gradients vanish or explode\n",
-    "\n",
-    "Let's explore this third hypothesis (it is always good to plot this to get a sense of what the network is doing internally). If we plot the histogram (__everyone look to my screen, this code will not be provided__) of the activations are the second "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([   19.,   110.,   234.,   535.,   849.,  1213.,  1532.,  1829.,\n",
-       "         2033.,  2078.,  2061.,  1852.,  1698.,  1336.,  1061.,   769.,\n",
-       "          479.,   215.,    79.,    18.]),\n",
-       " array([ 0.0529,  0.0979,  0.143 ,  0.1881,  0.2332,  0.2782,  0.3233,\n",
-       "         0.3684,  0.4134,  0.4585,  0.5036,  0.5486,  0.5937,  0.6388,\n",
-       "         0.6839,  0.7289,  0.774 ,  0.8191,  0.8641,  0.9092,  0.9543]),\n",
-       " <a list of 20 Patch objects>)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYEAAAD8CAYAAACRkhiPAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAFIFJREFUeJzt3X+QZWWd3/H3R1CSrBrQ6aXY+ZFB\na2YrI0lG7cLZ2miwWHCgthhMUmSmagUMZesKSUQrKXFThYWhYrKLlNYazLhMASnlxy7rMrUZw84S\ns9SmHKRBgoCCA/JjJiPTKwRM2JAd/OaPe0avQ/f0nXtv39vd5/2qutXnPufH/T70FJ8+5zn3PKkq\nJEnt9JpxFyBJGh9DQJJazBCQpBYzBCSpxQwBSWoxQ0CSWswQkKQWMwQkqcUMAUlqsePHXcB8VqxY\nUWvXrh13GZK0ZNx3331/UVUTvWy76ENg7dq1TE9Pj7sMSVoykjzV67ZeDpKkFjMEJKnFDAFJajFD\nQJJazBCQpBYzBCSpxQwBSWoxQ0CSWswQkKQWW/TfGJZG4hv/tr/93nvFcOuQRswQkAbRb3iAAaJF\nwctBktRihoAktdi8l4OSrAZuAk4GCtheVZ9P8ibgVmAt8CRwQVU9nyTA54FzgZeAi6vq/uZYFwH/\nujn0v6mqG4fbHbXeIJdnpBbq5UzgEPCJqtoAbAIuTbIB+CRwV1WtA+5q3gOcA6xrXlPAdQBNaFwJ\nvAs4HbgyyUlD7Isk6RjNGwJVdeDwX/JV9WPgu8BKYAtw+C/5G4Hzm+UtwE3VsQc4MckpwPuA3VX1\nXFU9D+wGNg+1N5KkY3JMYwJJ1gJvB+4BTq6qA82qH9K5XASdgHima7d9Tdtc7bN9zlSS6STTMzMz\nx1KiJOkY9BwCSV4P3A58rKpe7F5XVUVnvGAoqmp7VU1W1eTERE8zpEmS+tBTCCR5LZ0A+EpV/WHT\n/GxzmYfm58GmfT+wumv3VU3bXO2SpDGZNwSau32uB75bVZ/rWrUTuKhZvgi4o6v9wnRsAl5oLhvd\nCZyd5KRmQPjspk2SNCa9fGP4V4EPAN9J8kDT9ings8BtSS4BngIuaNbtonN76F46t4h+EKCqnkvy\nGeDeZrurquq5ofRCktSXeUOgqv4cyByrz5xl+wIuneNYO4Adx1KgJGnh+I1hSWoxQ0CSWswQkKQW\nMwQkqcUMAUlqMUNAklrMEJCkFjMEJKnFDAFJajEnmpfGpd9Z0JygXkPkmYAktZghIEkt5uUgLU5O\nGC+NhGcCktRihoAktZghIEkt1sv0kjuSHEzyUFfbrUkeaF5PHp5xLMnaJH/Zte5LXfu8M8l3kuxN\n8oVm2kpJ0hj1MjB8A/C7wE2HG6rqnxxeTnIN8ELX9o9X1cZZjnMd8CHgHjpTUG4Gvn7sJUuShmXe\nM4GquhuYdS7g5q/5C4Cbj3aMJKcAb6yqPc30kzcB5x97uZKkYRp0TODdwLNV9f2utlOTfDvJnyV5\nd9O2EtjXtc2+pm1WSaaSTCeZnpmZGbBESdJcBg2Bbfz8WcABYE1VvR34OPDVJG881oNW1faqmqyq\nyYmJiQFLlCTNpe8viyU5HviHwDsPt1XVy8DLzfJ9SR4H1gP7gVVdu69q2iRJYzTImcCvAd+rqp9e\n5kkykeS4ZvktwDrgiao6ALyYZFMzjnAhcMcAny1JGoJebhG9Gfgm8MtJ9iW5pFm1lVcPCL8HeLC5\nZfQPgI9U1eFB5Y8CvwfsBR7HO4MkaezmvRxUVdvmaL94lrbbgdvn2H4aOO0Y65MkLSAfICctNc5D\noCHysRGS1GKGgCS1mCEgSS1mCEhSixkCktRihoAktZghIEktZghIUosZApLUYoaAJLWYISBJLWYI\nSFKL+QA5qU/ffOJHY/ncX3nLm8fyuVqePBOQpBYzBCSpxea9HJRkB/DrwMGqOq1p+zTwIWCm2exT\nVbWrWXcFcAnwCvDPq+rOpn0z8HngOOD3quqzw+2KFp1+n3s/QuO6pCMtFr2cCdwAbJ6l/dqq2ti8\nDgfABjrTTr6t2ec/JDmumXf4i8A5wAZgW7OtJGmMeple8u4ka3s83hbglqp6GfhBkr3A6c26vVX1\nBECSW5ptHznmiiVJQzPImMBlSR5MsiPJSU3bSuCZrm32NW1ztc8qyVSS6STTMzMzc20mSRpQvyFw\nHfBWYCNwALhmaBUBVbW9qiaranJiYmKYh5YkdenrewJV9ezh5SRfBv64ebsfWN216aqmjaO0S5LG\npK8zgSSndL19P/BQs7wT2JrkhCSnAuuAbwH3AuuSnJrkdXQGj3f2X7YkaRh6uUX0ZuAMYEWSfcCV\nwBlJNgIFPAl8GKCqHk5yG50B30PApVX1SnOcy4A76dwiuqOqHh56b7QkeZumND693B20bZbm64+y\n/dXA1bO07wJ2HVN1kqQF5TeGJanFDAFJajFDQJJazBCQpBYzBCSpxQwBSWoxQ0CSWswQkKQWc45h\nqWWu3f1Y3/teftb6IVaixcAQkJaYfh+zsedQ///z1/JlCGgoZvvrctPTPhNIWuwMAaklNj29va/9\n9qyZGnIlWkwcGJakFjMEJKnFDAFJajFDQJJabN4QSLIjycEkD3W1/XaS7yV5MMnXkpzYtK9N8pdJ\nHmheX+ra551JvpNkb5IvJMnCdEmS1KtezgRuADYf0bYbOK2q/i7wGHBF17rHq2pj8/pIV/t1wIfo\nzDu8bpZjSpJGbN4QqKq7geeOaPuTqjrUvN0DrDraMZqJ6d9YVXuqqoCbgPP7K1mSNCzDGBP4p8DX\nu96fmuTbSf4sybubtpXAvq5t9jVts0oylWQ6yfTMzMwQSpQkzWagL4sl+S3gEPCVpukAsKaqfpTk\nncAfJXnbsR63qrYD2wEmJydrkBrVu0GeKaN28LlDy0/fIZDkYuDXgTObSzxU1cvAy83yfUkeB9YD\n+/n5S0armjZJ0hj1dTkoyWbgXwHnVdVLXe0TSY5rlt9CZwD4iao6ALyYZFNzV9CFwB0DVy9JGsi8\nZwJJbgbOAFYk2QdcSeduoBOA3c2dnnuaO4HeA1yV5K+AnwAfqarDg8ofpXOn0V+nM4bQPY6gRazf\nZ85IWvzmDYGq2jZL8/VzbHs7cPsc66aB046pOknSgvIbw5LUYoaAJLWYISBJLWYISFKLGQKS1GKG\ngCS1mCEgSS1mCEhSixkCktRihoAktdhAj5LW4uPjoLVY+RjqxckzAUlqMUNAklrMy0GSjmqQR4nv\nWTM1xEq0EDwTkKQW6ykEkuxIcjDJQ11tb0qyO8n3m58nNe1J8oUke5M8mOQdXftc1Gz//SQXDb87\nkqRj0euZwA3A5iPaPgncVVXrgLua9wDn0JlWch0wBVwHndCgMyvZu4DTgSsPB4ckaTx6CoGquht4\n7ojmLcCNzfKNwPld7TdVxx7gxCSnAO8DdlfVc1X1PLCbVweLJGmEBhkTOLmZQB7gh8DJzfJK4Jmu\n7fY1bXO1S5LGZCgDw1VVQA3jWABJppJMJ5memZkZ1mElSUcYJASebS7z0Pw82LTvB1Z3bbeqaZur\n/VWqantVTVbV5MTExAAlSpKOZpAQ2AkcvsPnIuCOrvYLm7uENgEvNJeN7gTOTnJSMyB8dtMmSRqT\nnr4sluRm4AxgRZJ9dO7y+SxwW5JLgKeAC5rNdwHnAnuBl4APAlTVc0k+A9zbbHdVVR052CxJGqGe\nQqCqts2x6sxZti3g0jmOswPY0XN1kqQF5TeGJanFDAFJajFDQJJazBCQpBYzBCSpxQwBSWoxQ0CS\nWsyZxRYZJ4qXNEqeCUhSixkCktRiXg5qkUEmDJe0PBkCkha9QcfKLj9r/ZAqWX68HCRJLWYISFKL\nGQKS1GKGgCS1WN8hkOSXkzzQ9XoxyceSfDrJ/q72c7v2uSLJ3iSPJnnfcLogSepX33cHVdWjwEaA\nJMfRmTT+a3Smk7y2qn6ne/skG4CtwNuAXwL+NMn6qnql3xokSYMZ1i2iZwKPV9VTSebaZgtwS1W9\nDPwgyV7gdOCbQ6pB0iLT73dT9qyZGnIlmsuwxgS2Ajd3vb8syYNJdiQ5qWlbCTzTtc2+pk2SNCYD\nh0CS1wHnAb/fNF0HvJXOpaIDwDV9HHMqyXSS6ZmZmUFLlCTNYRhnAucA91fVswBV9WxVvVJVPwG+\nTOeSD3TGDFZ37beqaXuVqtpeVZNVNTkxMTGEEiVJsxlGCGyj61JQklO61r0feKhZ3glsTXJCklOB\ndcC3hvD5kqQ+DTQwnOQXgLOAD3c1//skG4ECnjy8rqoeTnIb8AhwCLjUO4MkabwGCoGq+j/Am49o\n+8BRtr8auHqQz5QkDY/fGJakFjMEJKnFDAFJajFDQJJazBCQpBYzBCSpxQwBSWoxQ0CSWswQkKQW\nG9Z8Aupy7e7Hxl2CJPXEMwFJajFDQJJazBCQpBYzBCSpxQwBSWox7w6StOwNcsfe5WetH2Ili8/A\nIZDkSeDHwCvAoaqaTPIm4FZgLZ3ZxS6oqueTBPg8cC7wEnBxVd0/aA1ts+np7eMuQdIyMazLQe+t\nqo1VNdm8/yRwV1WtA+5q3kNnUvp1zWsKuG5Iny9J6sNCjQlsAW5slm8Ezu9qv6k69gAnHjExvSRp\nhIYRAgX8SZL7kkw1bSdX1YFm+YfAyc3ySuCZrn33NW2SpDEYxsDw36+q/Ul+Edid5HvdK6uqktSx\nHLAJkymANWvWDKFESdJsBj4TqKr9zc+DwNeA04FnD1/maX4ebDbfD6zu2n1V03bkMbdX1WRVTU5M\nTAxaoiRpDgOdCST5BeA1VfXjZvls4CpgJ3AR8Nnm5x3NLjuBy5LcArwLeKHrspEkAf3fAbdnzdT8\nG+nnDHo56GTga507Pzke+GpV/Zck9wK3JbkEeAq4oNl+F53bQ/fSuUX0gwN+viRpAAOFQFU9Afy9\nWdp/BJw5S3sBlw7ymZKk4fGxEZLUYoaAJLWYISBJLWYISFKLGQKS1GKGgCS1mCEgSS1mCEhSixkC\nktRihoAktZghIEktZghIUosZApLUYsOYWWxZunb3Y+MuQZIWnGcCktRinglI0lEMclXg8rPWD7GS\nhdH3mUCS1Um+keSRJA8n+RdN+6eT7E/yQPM6t2ufK5LsTfJokvcNowOSpP4NciZwCPhEVd2f5A3A\nfUl2N+uurarf6d44yQZgK/A24JeAP02yvqpeGaAGSdIA+j4TqKoDVXV/s/xj4LvAyqPssgW4pape\nrqof0Jln+PR+P1+SNLihDAwnWQu8HbinabosyYNJdiQ5qWlbCTzTtds+jh4akqQFNnAIJHk9cDvw\nsap6EbgOeCuwETgAXNPHMaeSTCeZnpmZGbRESdIcBro7KMlr6QTAV6rqDwGq6tmu9V8G/rh5ux9Y\n3bX7qqbtVapqO7AdYHJysgapcbHa9PT2cZcgSQPdHRTgeuC7VfW5rvZTujZ7P/BQs7wT2JrkhCSn\nAuuAb/X7+ZKkwQ1yJvCrwAeA7yR5oGn7FLAtyUaggCeBDwNU1cNJbgMeoXNn0aXeGSRpmPo9w96z\nZmrIlSwdfYdAVf05kFlW7TrKPlcDV/f7mZKk4fKxEZLUYoaAJLWYISBJLWYISFKLGQKS1GKGgCS1\nmCEgSS1mCEhSixkCktRiTi85IB8EJ2kpW9YhMMjcoJLUBss6BCRpnJbCJPWGgKTWG+Sy7lJ/AqkD\nw5LUYoaAJLWYISBJLTbyEEiyOcmjSfYm+eSoP1+S9DMjDYEkxwFfBM4BNtCZinLDKGuQJP3MqO8O\nOh3YW1VPACS5BdhCZ97hsfJLX5L6sdTnNR715aCVwDNd7/c1bZKkMViU3xNIMgUcjsn/neTReXZZ\nAfzFwla1aLW579Du/tv3Je2ao679+Nyreun73+q1ilGHwH5gddf7VU3bz6mq7UDP51hJpqtqcvDy\nlp429x3a3X/7bt+HYdSXg+4F1iU5NcnrgK3AzhHXIElqjPRMoKoOJbkMuBM4DthRVQ+PsgZJ0s+M\nfEygqnYBu4Z82Dbf2tPmvkO7+2/f22mofU9VDfN4kqQlxMdGSFKLLakQmO+RE0lOSHJrs/6eJGtH\nX+XC6KHvH0/ySJIHk9yVpOdbxBa7Xh81kuQfJakky+aukV76nuSC5nf/cJKvjrrGhdTDv/s1Sb6R\n5NvNv/1zx1HnsCXZkeRgkofmWJ8kX2j+uzyY5B19f1hVLYkXnYHkx4G3AK8D/gew4YhtPgp8qVne\nCtw67rpH2Pf3An+jWf7NNvW92e4NwN3AHmBy3HWP8Pe+Dvg2cFLz/hfHXfeI+78d+M1meQPw5Ljr\nHlLf3wO8A3hojvXnAl8HAmwC7un3s5bSmcBPHzlRVf8POPzIiW5bgBub5T8AzkySEda4UObte1V9\no6peat7uofMdjOWgl987wGeAfwf831EWt8B66fuHgC9W1fMAVXVwxDUupF76X8Abm+W/CfzPEda3\nYKrqbuC5o2yyBbipOvYAJyY5pZ/PWkoh0MsjJ366TVUdAl4A3jyS6hbWsT5u4xI6fyUsB/P2vTkV\nXl1V/3mUhY1AL7/39cD6JP89yZ4km0dW3cLrpf+fBn4jyT46dx3+s9GUNnZDewTPonxshPqX5DeA\nSeAfjLuWUUjyGuBzwMVjLmVcjqdzSegMOmd/dyf5O1X1v8Za1ehsA26oqmuS/Arwn5KcVlU/GXdh\nS8VSOhPo5ZETP90myfF0Tg9/NJLqFlZPj9tI8mvAbwHnVdXLI6ptoc3X9zcApwH/LcmTdK6P7lwm\ng8O9/N73ATur6q+q6gfAY3RCYTnopf+XALcBVNU3gb9G59k6y11P/0/oxVIKgV4eObETuKhZ/sfA\nf61mFGWJm7fvSd4O/Ec6AbCcrgsfte9V9UJVraiqtVW1ls54yHlVNT2ecoeql3/zf0TnLIAkK+hc\nHnpilEUuoF76/zRwJkCSv00nBGZGWuV47AQubO4S2gS8UFUH+jnQkrkcVHM8ciLJVcB0Ve0Erqdz\nOriXzqDK1vFVPDw99v23gdcDv9+MhT9dVeeNregh6bHvy1KPfb8TODvJI8ArwL+squVw9ttr/z8B\nfDnJ5XQGiS9eDn/4JbmZTrivaMY7rgReC1BVX6Iz/nEusBd4Cfhg35+1DP57SZL6tJQuB0mShswQ\nkKQWMwQkqcUMAUlqMUNAklrMEJCkFjMEJKnFDAFJarH/DxI7Bes2tnzfAAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f9c2a311a20>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "batch_images, batch_labels = mnist.train.next_batch(100)\n",
-    "\n",
-    "feed_dict = {\n",
-    "    x: batch_images,\n",
-    "    target: batch_labels\n",
-    "}\n",
-    "result = session.run([hidden1, hidden2], feed_dict=feed_dict)\n",
-    "plt.hist(result[0].flatten(), 20, alpha=0.5)\n",
-    "plt.hist(result[1].flatten(), 20, alpha=0.5)"
+    "- The activations are poorly dimensioned so the gradients vanish or explode\n"
    ]
   },
   {
@@ -33130,7 +33090,7 @@
    "cell_type": "code",
    "execution_count": 136,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
